experimented with layout
fixed items relative to a their container
aligned elements
and organized html and css

--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 	<title>Luis Lopez Design</title>
 	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
-<body>
-	<div class="main-background">
-	<img class="logo" src="./resources/images/prelogo.png">
-	<div class="blue-background">
-		<h2 class="title">Luis Lopez Design</h2>
-	</div>
-	<img class="phone" src="./resources/images/phone.png">
-	<img src="./resources/images/precable.png">
-	<img class="computer" src="./resources/images/precomputer.png">
-	<div class="hero">
-		
-
-		<ul>
-			<li>Work</li>
-			<li>About</li>
-			<li>Contact</li>
-		</ul>
-	</div>
-	<div class="work">
-		<img src="./resources/images/computers.png">
-		<h2>Projects</h2>
-	</div>
+<body>	
+ 	<div class="blue-background"></div>
+	<h2 class="title">Luis Lopez Design</h2>
+    <div class="main-background"></div>
+	<div class="main">
+		<img class="logo" src="./resources/images/prelogo.png">
+	    <div class="phone-wrapper">
+	    	<img class="phone" src="./resources/images/phone.png">
+	    </div>
+		<div class="computer-wrapper">
+		    <img class="computer" src="./resources/images/precomputer.png">
+	    </div>
+		<div class="nav-wrapper">
+			<ul class="nav">
+				<li>Work</li>
+				<li>About</li>
+				<li>Contact</li>
+			</ul>
+		</div>
+		<div class="work">
+			<h2>Projects</h2>
+		</div>
 	</div>
 </body>
 </html>
