experimented with javascript
added headline + bio and made them responsive to scrolling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	    	<img class="phone" src="./resources/images/phone.png">
 	    </div>
 		<div class="computer-wrapper">
+			<h1 id="main-text">Artist Graphic Designer Web Developer</h1>
+			<h2 id="bio">Hello, my name is Luis Lopez. I am an Artist, Graphic Designer & Web Developer based in Stratford Connecticut</h2>
 		    <img class="computer" src="./resources/images/precomputer.png">
 	    </div>
 		<div class="nav-wrapper">
@@ -24,9 +26,13 @@
 				<li>Contact</li>
 			</ul>
 		</div>
+		<div class="cable-wrapper">
+			<img class="cable" src="./resources/images/precable.png">
+		</div>
 		<div class="work">
 			<h2>Projects</h2>
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="./resources/javascript/script.js"></script>
 </html>
