--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 	    <div class="phone-wrapper">
 	    	<img class="phone" src="./resources/images/phone.png">
 	    </div>
+	    <img id="profile" class="profile" src="./resources/images/profile.png">
 		<div class="computer-wrapper">
 			<h1 id="main-text">Artist Graphic Designer Web Developer</h1>
 			<h2 id="bio">Hello, my name is Luis Lopez. I am an Artist, Graphic Designer & Web Developer based in Stratford Connecticut</h2>
 		    <img class="computer" src="./resources/images/precomputer.png">
+		    <img class="cable" src="./resources/images/precable.png">
+
 	    </div>
 		<div class="nav-wrapper">
 			<ul class="nav">
@@ -26,12 +29,43 @@
 				<li>Contact</li>
 			</ul>
 		</div>
-		<div class="cable-wrapper">
+		<!--<div class="cable-wrapper">
 			<img class="cable" src="./resources/images/precable.png">
-		</div>
+		</div>-->
 		<div class="work">
 			<h2>Projects</h2>
+			<div class="screen"></div>
+			<div class="info">
+				<p>This is where information about projects will go. As i get further along the website will look better and better!</p>
+			</div>
+			<div class="folders">
+				<div class="category">
+					<h4>Art Work</h4>
+				</div>
+				<div class="category">
+					<h4>Graphic Design</h4>
+				</div>
+				<div class="category">
+					<h4>Web Development</h4>
+				</div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+				<div class="folder"></div>
+		    </div>
 		</div>
+		<div class="bottom-background"></div>
 	</div>
 </body>
 <script type="text/javascript" src="./resources/javascript/script.js"></script>
