--- a/index.html
+++ b/index.html
@@ -6,67 +6,85 @@
 	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>	
- 	<div class="blue-background"></div>
-	<h2 class="title">Luis Lopez Design</h2>
-    <div class="main-background"></div>
-	<div class="main">
-		<img class="logo" src="./resources/images/prelogo.png">
-	    <div class="phone-wrapper">
-	    	<img class="phone" src="./resources/images/phone.png">
-	    </div>
-	    <img id="profile" class="profile" src="./resources/images/profile.png">
-		<div class="computer-wrapper">
-			<h1 id="main-text">Artist Graphic Designer Web Developer</h1>
-			<h2 id="bio">Hello, my name is Luis Lopez. I am an Artist, Graphic Designer & Web Developer based in Stratford Connecticut</h2>
-		    <img class="computer" src="./resources/images/precomputer.png">
-		    <img class="cable" src="./resources/images/precable.png">
-
-	    </div>
-		<div class="nav-wrapper">
-			<ul class="nav">
-				<li>Work</li>
-				<li>About</li>
-				<li>Contact</li>
-			</ul>
-		</div>
-		<!--<div class="cable-wrapper">
+	<div class="hero">
+		<div class="blue-background"></div>
+		<div class="main-background"></div>
+		<div class="main">
+			<img class="logo" src="./resources/images/prelogo.png">
+			<h2 class="title">Luis Lopez Design</h2>
+		    <div class="phone-wrapper">
+		    	<img class="phone" src="./resources/images/phone.png">
+		    </div>
+		    <img id="profile" class="profile" src="./resources/images/profile.png">
+			<div class="computer-wrapper">
+				<h1 id="main-text"></h1>
+				<h2 id="bio">Hello,<br><br>My name is Luis Lopez. I am an Artist, Graphic Designer & Web Developer based in Stratford Connecticut</h2>
+			    <img class="computer" src="./resources/images/precomputer.png">
+			</div>
 			<img class="cable" src="./resources/images/precable.png">
-		</div>-->
+			<div class="nav-wrapper">
+				<ul class="nav">
+					<li><h3>Work</h3></li>
+					<li><h3>About</h3></li>
+					<li><h3>Contact</h3></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="portfolio">
 		<div class="work">
 			<h2>Projects</h2>
-			<div class="screen"></div>
-			<div class="info">
-				<p>This is where information about projects will go. As i get further along the website will look better and better!</p>
-			</div>
-			<div class="folders">
-				<div class="category">
-					<h4>Art Work</h4>
-				</div>
-				<div class="category">
-					<h4>Graphic Design</h4>
-				</div>
-				<div class="category">
-					<h4>Web Development</h4>
-				</div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
-				<div class="folder"></div>
+			<div class="work-elements">
+				<div class="display">
+					<div id="screen" class="screen"></div>
+					<div class="info">
+						<p id="info">Locating  file . . . </p>
+						<div class="skill"></div>
+						<div class="skill"></div>
+						<div class="skill"></div>
+						<div class="skill"></div>
+						<div class="skill"></div>
+					</div>
+			    </div>
+				<div class="folders">
+					<div class="category">
+						<h4>Art<br>Work</h4>
+					</div>
+					<div class="category">
+						<h4>Graphic Design</h4>
+					</div>
+					<div class="category">
+						<h4>Web Development</h4>
+					</div>
+					<div id="paintings" class="folder"></div>
+					<div id="brand" class="folder"></div>
+					<div class="folder"></div>
+					<div id="editing" class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+					<div class="folder"></div>
+			    </div>
 		    </div>
 		</div>
-		<div class="bottom-background"></div>
 	</div>
+	<div class="bottom">
+		<div class="bottom-background"></div>
+		<footer>
+		<p>&copy; Luis Lopez Design 2021</p>
+		<p>luis.lopez0417@gmail.com</p>
+	    </footer>
+	</div>
+ 	
+		
+	
 </body>
 <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </html>
