experimented with responsiveness

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 					<div id="paintings" class="folder"></div>
 					<div id="brand" class="folder"></div>
-					<div class="folder"></div>
+					<div id="silmar" class="folder"></div>
 					<div id="editing" class="folder"></div>
 					<div class="folder"></div>
 					<div class="folder"></div>
